<resources>
    <string name="app_name">Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="main">main</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="change">Change</string>
    <string name="change_description">Change description</string>
    <string name="add">Add</string>
    <string name="clear_all">Clear all</string>
    <string name="about">About</string>
    <string name="fragment_navigation">Notes</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="canceled">Canceled</string>
    <string name="completed">Completed</string>

</resources>